--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Las recetas de 1109</title>
+        <link rel="stylesheet" href="./css/estilo.css">
+        
     </head>
 
     <body></body>
