cambios de boosttrap

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -65,7 +65,8 @@
                     de tipografías o de borradores de diseño para probar el diseño visual antes de insertar el texto
                     final.</p>
                 <p class="secondary bg-danger">A Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en
-                    demostraciones de tipografías o de borradores de diseño para probar el diseño visual antes de
+                    demostraciones de tipografías o
+     de borradores de diseño para probar el diseño visual antes de
                     insertar el texto final.</p>
             </div>
         </div>
