--- a/javaScrip/index.html
+++ b/javaScrip/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1 class="text-center">Javascript</h1>
-  <button id ="btn" class="btn btn-primary">Sumar</button>
+  <button id ="btn" class="btn btn-primary">Hacer operación</button>
     <div class="container">
         <div class="row" id= "principal">
             
