--- a/javaScrip/index.html
+++ b/javaScrip/index.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estiloJava.css">
+    
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1 class="text-center">Javascript</h1>
-  <button id ="btn" class="btn btn-primary">Hacer operación</button>
-    <div class="container">
+ <!--   <button id ="btn" class="btn btn-primary" >Hacer operación</button>
+    --><div class="container">
         <div class="row" id= "principal">
             
         </div>
     </div>
-<script src="./js/clase.js"></script>
+<script src="./js/clase4.js"></script>
 </body>
 </html>
