--- a/javaScrip/index.html
+++ b/javaScrip/index.html
@@ -18,6 +18,6 @@
             
         </div>
     </div>
-<script src="./js/clase4.js"></script>
+<script src="./clase5.js"></script>
 </body>
 </html>
